fixed spacing problem

--- a/cart-list.css
+++ b/cart-list.css
@@ -218,9 +218,9 @@
 
         width: 80vw;
         height: 40vh;
-        float: left;
+
         margin-top: 5vh;
-        margin-left:5vw;
+        margin-left:10vw;
         border-style: solid;
         border-width:1px;
     }
@@ -251,7 +251,7 @@
         float: left;
         border-width: 0em;
         border-radius: 20px;
-        margin-top: 8vh;
+        margin-top: 4vh;
         margin-left: 6vw;
     }
 
